--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -8,6 +8,9 @@
     "wdth" 100;
 }
 /*shared style*/
+.secondary-bg{
+    background-color: #FFF8F3;
+}
 .text-primary{
     color: #FD6E0A;
 }
@@ -19,6 +22,15 @@
     border-radius: 5px;
     font-size: 20px;
     border:none;
+}
+.section-title{
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818;
+}
+.section-description{
+    font-size: 18px;
+    color: #787878;
 }
 .header{
     background-image: url(/images/developer.png), url(/images/header_bg.png);
@@ -73,4 +85,22 @@ nav ul{
 }
 .banner-content{
     width: 580px;
+}
+/*main styles*/
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+.about{
+    border-radius: 10px;
+    padding: 130px 150px;
+    text-align: center;
+    margin-top: 130px;
+}
+.about-items{
+    display: flex;
+    justify-content: space-around;
+}
+.item-description{
+    font-weight: 600;
 }
